data/raw_logs/syntactic/syn_23.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_23.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_23.c:1:32: error: expected ';' before 'i'
    1 | int main() { for (int i=0; i<10 i++) {} }
      |                                ^~
      |                                ;
